--- a/rainbow/rainbow-core/pom.xml
+++ b/rainbow/rainbow-core/pom.xml
@@ -19,7 +19,7 @@
 	<packaging>jar</packaging>
 	<!-- Version. This should *always* be a snapshot version by convention. 
 		Name should be <version-number>-SNAPSHOT. -->
-	<version>2.1.1-SNAPSHOT</version>
+	<version>2.2.0-SNAPSHOT</version>
 	<!-- User readable name of the pom. -->
 	<name>Rainbow Core</name>
 	<!-- URL for the project site. -->
@@ -85,6 +85,12 @@
 			<roles>
 				<role />
 			</roles>
+		</developer>
+		<developer>
+			<id>cmendesce</id>
+			<name>Carlos Mendes</name>
+			<email>cmendesce@gmail.com</email>
+			<timezone>0</timezone>
 		</developer>
 	</developers>
 
