--- a/rainbow/rainbow-stitch/pom.xml
+++ b/rainbow/rainbow-stitch/pom.xml
@@ -1,10 +1,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>rainbow</groupId>
+	<parent>
+		<groupId>rainbow</groupId>
+		<artifactId>rainbow-framework</artifactId>
+		<version>2.2.0-SNAPSHOT</version>
+		<relativePath>../</relativePath>
+	</parent>
 	<artifactId>rainbow-stitch</artifactId>
 	<packaging>jar</packaging>
-	<version>2.2-SNAPSHOT</version>
+	<version>2.2.0-SNAPSHOT</version>
 	<name>Rainbow Stitch Language Parser</name>
 
 	<properties>
@@ -444,11 +449,6 @@
 	</profiles>
 
 	<dependencies>
-		<dependency>
-			<groupId>log4j</groupId>
-			<artifactId>log4j</artifactId>
-			<version>1.2.17</version>
-		</dependency>
 		<dependency>
 			<groupId>rainbow</groupId>
 			<artifactId>rainbow-core</artifactId>
