--- a/rainbow/rainbow-utility-model/pom.xml
+++ b/rainbow/rainbow-utility-model/pom.xml
@@ -1,9 +1,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>rainbow</groupId>
+	<parent>
+		<groupId>rainbow</groupId>
+		<artifactId>rainbow-framework</artifactId>
+		<version>2.2.0-SNAPSHOT</version>
+		<relativePath>../</relativePath>
+	</parent>
 	<artifactId>rainbow-utility-model</artifactId>
-	<version>2.0-SNAPSHOT</version>
+	<version>2.2.0-SNAPSHOT</version>
 	<name>Rainbow Utility Model</name>
 	<description>Rainbow Model of Utility</description>
 	<build>
